Resolve the Webhint errors in html file

--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             </header>
             <p>This section lists the references and resources used in the documentation. These resources provide additional information and tutorials to help you learn more.</p>
             <ul>
-                <li><a href="https://developer.mozilla.org/" target="_blank">MDN Web Docs</a> - Comprehensive documentation for web developers.</li>
-                <li><a href="https://www.w3schools.com/" target="_blank">W3Schools</a> - A wide range of tutorials and references on web development topics.</li>
-                <li><a href="https://freecodecamp.org/" target="_blank">freeCodeCamp</a> - A platform offering coding challenges and projects to help you learn to code.</li>
+                <li><a href="https://developer.mozilla.org/" target="_blank" rel="noopener">MDN Web Docs</a> - Comprehensive documentation for web developers.</li>
+                <li><a href="https://www.w3schools.com/" target="_blank" rel="noopener">W3Schools</a> - A wide range of tutorials and references on web development topics.</li>
+                <li><a href="https://freecodecamp.org/" target="_blank" rel="noopener">freeCodeCamp</a> - A platform offering coding challenges and projects to help you learn to code.</li>
             </ul>
             <p>Feel free to explore these resources to deepen your understanding of the topics covered in this documentation.</p>
         </section>
@@ -84,7 +84,7 @@
                 <h2>Demo</h2>
             </header>
             <p>This section provides a live demo of the project. Click the link below to view the demo:</p>
-            <p><a href="https://technical-documentation-page.freecodecamp.rocks" target="_blank">View Demo</a></p>
+            <p><a href="https://technical-documentation-page.freecodecamp.rocks" target="_blank" rel="noopener">View Demo</a></p>
         </section>
         <section id="about" class="main-section">
             <header>
@@ -92,7 +92,7 @@
             </header>
             <p><strong>Project Title:</strong> Technical Documentation Page</p>
             <p><strong>Author:</strong> Your Name</p>
-            <p><strong>Demo:</strong> <a href="https://technical-documentation-page.freecodecamp.rocks" target="_blank">View Demo</a></p>
+            <p><strong>Demo:</strong> <a href="https://technical-documentation-page.freecodecamp.rocks" target="_blank" rel="noopener">View Demo</a></p>
             <p><strong>Features:</strong></p>
             <ul>
                 <li>User-friendly navigation</li>
